# order_service

./: .flake8  README.md  alembic.ini  pyproject.toml  settings.yml
src/: main.py
src/adapters/: alchemy_adapter.py  rabbit_adapter.py
src/adapters/broker/: rabbit_adapter.py
src/adapters/database/: alchemy_adapter.py
src/application/: app.py  application.py  config.py  container.py  server.py
src/application/processes/: consume_process.py
src/application/services/: order_item_service.py  order_service.py
src/domain/order/entities/: dto.py  enums.py  model.py
src/domain/order/repositories/: read_repository.py  write_repository.py
src/domain/order_item/entities/: dto.py  model.py
src/domain/order_item/repositories/: read_repository.py  write_repository.py
src/infrastructure/base/: singleton.py
src/infrastructure/common/base_entities/: singleton.py
src/infrastructure/common/interfaces/: broker_interface.py  router_interface.py
src/infrastructure/common/utils/: dto_converter.py  safe_gather.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: __init__.py  base.py  order.py  order_item.py
src/infrastructure/database/repositories/: read_repository.py  write_repository.py
src/infrastructure/server/: config.py  provider.py  server.py
src/main/common/: base_object.py  repository_interfaces.py  router_interface.py  singleton.py
src/main/common/base_entities/: patched_filter.py  singleton.py
src/main/common/interfaces/: broker_interface.py  (+1 more)
src/presentation/api/: order_item_router.py  order_router.py
(+9 files in other folders)
